unit_test_results.log
    Blocking waiting for file lock on artifact directory
   Compiling log v0.4.29
   Compiling smallvec v1.15.1
   Compiling bitflags v2.10.0
   Compiling scopeguard v1.2.0
   Compiling hashbrown v0.16.1
   Compiling lock_api v0.4.14
   Compiling bytes v1.11.1
   Compiling zerofrom v0.1.6
   Compiling parking_lot_core v0.9.12
   Compiling parking_lot v0.12.5
   Compiling zerocopy v0.8.39
   Compiling indexmap v2.13.0
   Compiling displaydoc v0.2.5
   Compiling mio v1.1.1
   Compiling futures-task v0.3.31
   Compiling tokio v1.49.0
   Compiling tracing-core v0.1.36
   Compiling tracing v0.1.44
   Compiling ppv-lite86 v0.2.21
   Compiling writeable v0.6.2
   Compiling litemap v0.8.1
   Compiling rustix v1.1.3
   Compiling serde_json v1.0.149
   Compiling futures-util v0.3.31
   Compiling generic-array v0.14.9
   Compiling yoke v0.8.1
   Compiling crypto-common v0.1.6
   Compiling block-buffer v0.10.4
   Compiling digest v0.10.7
   Compiling zerovec v0.11.5
   Compiling http v1.4.0
   Compiling tinystr v0.8.2
   Compiling icu_locale_core v2.1.1
   Compiling potential_utf v0.1.4
   Compiling zerotrie v0.2.3
   Compiling icu_provider v2.1.1
   Compiling icu_collections v2.1.1
   Compiling zeroize v1.8.2
   Compiling icu_properties v2.1.2
   Compiling icu_normalizer v2.1.1
   Compiling http-body v1.0.1
   Compiling idna_adapter v1.2.1
   Compiling ring v0.17.14
   Compiling num-traits v0.2.19
   Compiling idna v1.1.0
   Compiling tokio-util v0.7.18
   Compiling winnow v0.7.14
   Compiling h2 v0.4.13
   Compiling url v2.5.8
   Compiling rustls-pki-types v1.14.0
   Compiling hyper v1.8.1
   Compiling aws-lc-rs v1.15.4
   Compiling system-configuration v0.7.0
   Compiling rand_chacha v0.3.1
   Compiling rustls v0.23.36
   Compiling rand v0.8.5
   Compiling hyper-util v0.1.20
   Compiling rustls-webpki v0.103.9
   Compiling http-body-util v0.1.3
   Compiling subtle v2.6.1
   Compiling tempfile v3.24.0
   Compiling security-framework v3.5.1
   Compiling security-framework v2.11.1
   Compiling native-tls v0.2.14
   Compiling tower v0.5.3
   Compiling futures-executor v0.3.31
   Compiling uuid v1.20.0
   Compiling toml_edit v0.22.27
   Compiling rand_chacha v0.9.0
   Compiling rustls-native-certs v0.8.3
   Compiling tokio-rustls v0.26.4
   Compiling sha2 v0.10.9
   Compiling pulley-interpreter v36.0.6
   Compiling tower-http v0.6.8
   Compiling hyper-rustls v0.27.7
   Compiling rand v0.9.2
   Compiling toml v0.8.23
   Compiling tokio-native-tls v0.3.1
   Compiling cranelift-codegen-meta v0.123.6
   Compiling phf_generator v0.11.3
   Compiling futures v0.3.31
   Compiling gimli v0.32.3
   Compiling spin v0.9.8
   Compiling cranelift-codegen v0.123.6
   Compiling hyper-tls v0.6.0
   Compiling concurrent-queue v2.5.0
   Compiling chrono v0.4.43
   Compiling sha1 v0.10.6
   Compiling regex-automata v0.4.14
   Compiling regalloc2 v0.12.2
   Compiling event-listener v5.4.1
   Compiling reqwest v0.12.28
   Compiling futures-intrusive v0.5.0
   Compiling tokio-stream v0.1.18
   Compiling either v1.15.0
   Compiling sqlx-core v0.8.6
   Compiling object v0.37.3
   Compiling regex v1.12.3
   Compiling flume v0.11.1
   Compiling wasmparser v0.236.1
   Compiling serde_yaml v0.9.34+deprecated
   Compiling postcard v1.1.3
   Compiling sqlx-sqlite v0.8.6
   Compiling chrono-tz v0.10.4
   Compiling ahash v0.8.12
   Compiling fs-set-times v0.20.3
   Compiling tungstenite v0.28.0
   Compiling darling_core v0.20.11
   Compiling crossbeam-epoch v0.9.18
   Compiling secrecy v0.8.0
   Compiling wasmprinter v0.236.1
   Compiling sqlx-macros-core v0.8.6
   Compiling wit-parser v0.236.1
   Compiling cap-primitives v3.4.5
   Compiling clawmaster-config v0.10.18 (/Users/arksong/ClawMaster/crates/config)
   Compiling crossbeam-deque v0.8.6
   Compiling darling_macro v0.20.11
   Compiling flate2 v1.1.9
   Compiling phf_macros v0.11.3
   Compiling darling_core v0.21.3
   Compiling atoi v2.0.0
   Compiling wasmtime-environ v36.0.6
   Compiling darling_macro v0.21.3
   Compiling phf v0.11.3
   Compiling phf_generator v0.10.0
   Compiling darling v0.20.11
   Compiling rayon-core v1.13.0
   Compiling wasmtime-internal-wit-bindgen v36.0.6
   Compiling sqlx-macros v0.8.6
   Compiling metrics v0.24.3
   Compiling cranelift-native v0.123.6
   Compiling cranelift-frontend v0.123.6
   Compiling clawmaster-common v0.10.18 (/Users/arksong/ClawMaster/crates/common)
   Compiling phf_codegen v0.11.3
   Compiling string_cache_codegen v0.5.4
   Compiling debugid v0.8.0
   Compiling xattr v1.6.1
   Compiling wasmtime-internal-fiber v36.0.6
   Compiling tar v0.4.44
   Compiling wasmtime-internal-cranelift v36.0.6
   Compiling fxprof-processed-profile v0.6.0
   Compiling markup5ever v0.12.1
   Compiling clawmaster-metrics v0.10.18 (/Users/arksong/ClawMaster/crates/metrics)
   Compiling sqlx v0.8.6
   Compiling wasmtime-internal-component-macro v36.0.6
   Compiling rayon v1.11.0
   Compiling derive_builder_core v0.20.2
   Compiling wasmtime-internal-cache v36.0.6
   Compiling phf_codegen v0.10.0
   Compiling wasmtime-internal-jit-debug v36.0.6
   Compiling darling v0.21.3
   Compiling cap-std v3.4.5
   Compiling witx v0.9.1
   Compiling wasmtime-internal-unwinder v36.0.6
   Compiling addr2line v0.25.1
   Compiling toml_parser v1.0.6+spec-1.1.0
   Compiling chromiumoxide_types v0.8.0
   Compiling fd-lock v4.0.4
   Compiling toml_edit v0.23.10+spec-1.0.0
   Compiling wasmtime v36.0.6
   Compiling chromiumoxide_pdl v0.8.0
   Compiling clawmaster-sessions v0.10.18 (/Users/arksong/ClawMaster/crates/sessions)
   Compiling wiggle-generate v36.0.6
   Compiling serde_with_macros v3.16.1
   Compiling selectors v0.25.0
   Compiling derive_builder_macro v0.20.2
   Compiling clawmaster-skills v0.10.18 (/Users/arksong/ClawMaster/crates/skills)
   Compiling derive_more-impl v2.1.1
   Compiling string_cache v0.8.9
   Compiling tokio-tungstenite v0.28.0
   Compiling clawmaster-agentic-loop v0.10.18 (/Users/arksong/ClawMaster/crates/agentic-loop)
   Compiling axum-core v0.5.6
   Compiling rustls-platform-verifier v0.6.2
   Compiling axum v0.8.8
   Compiling which v8.0.0
   Compiling cssparser v0.31.2
   Compiling backoff v0.4.0
   Compiling reqwest v0.13.2
   Compiling clawmaster-agents v0.10.18 (/Users/arksong/ClawMaster/crates/agents)
   Compiling derive_more v2.1.1
   Compiling derive_builder v0.20.2
   Compiling serde_with v3.16.1
   Compiling wiggle-macro v36.0.6
   Compiling value-ext v0.1.2
   Compiling chromiumoxide_cdp v0.8.0
   Compiling rustix v0.38.44
   Compiling proc-macro-crate v3.4.0
   Compiling reqwest-eventsource v0.6.0
   Compiling async-tungstenite v0.32.1
   Compiling tungstenite v0.26.2
   Compiling pxfm v0.1.27
   Compiling secrecy v0.10.3
   Compiling objc2-core-foundation v0.3.2
   Compiling derive_more v0.99.20
   Compiling lazy_static v1.5.0
   Compiling rstest_macros v0.25.0
   Compiling time v0.3.47
   Compiling colored v2.2.0
   Compiling async-openai v0.32.4
   Compiling sysinfo v0.34.2
   Compiling moxcms v0.7.11
   Compiling tokio-tungstenite v0.26.2
   Compiling png v0.18.0
   Compiling chromiumoxide v0.8.0
   Compiling system-interface v0.27.3
   Compiling genai v0.5.3
   Compiling wiggle v36.0.6
   Compiling html5ever v0.27.0
   Compiling cap-fs-ext v3.4.5
   Compiling clawmaster-oauth v0.10.18 (/Users/arksong/ClawMaster/crates/oauth)
   Compiling wasmtime-wasi-io v36.0.6
   Compiling cap-net-ext v3.4.5
   Compiling cap-rand v3.4.5
   Compiling cap-time-ext v3.4.5
   Compiling cron v0.13.0
   Compiling assert-json-diff v2.0.2
   Compiling bytemuck v1.25.0
   Compiling image v0.25.9
   Compiling scraper v0.20.0
   Compiling mockito v1.7.2
   Compiling feed-rs v2.3.1
   Compiling clawmaster-cron v0.10.18 (/Users/arksong/ClawMaster/crates/cron)
   Compiling wasmtime-wasi v36.0.6
   Compiling clawmaster-providers v0.10.18 (/Users/arksong/ClawMaster/crates/providers)
   Compiling clawmaster-browser v0.10.18 (/Users/arksong/ClawMaster/crates/browser)
   Compiling clawmaster-network-filter v0.10.18 (/Users/arksong/ClawMaster/crates/network-filter)
   Compiling rstest v0.25.0
   Compiling clawmaster-tools v0.10.18 (/Users/arksong/ClawMaster/crates/tools)
error[E0609]: no field `old_count` on type `PatchHunk`
   --> crates/tools/src/apply_patch.rs:380:29
    |
380 |         assert_eq!(hunks[0].old_count, 3);
    |                             ^^^^^^^^^ unknown field
    |
help: a field with a similar name exists
    |
380 |         assert_eq!(hunks[0]._old_count, 3);
    |                             +

error[E0609]: no field `new_start` on type `PatchHunk`
   --> crates/tools/src/apply_patch.rs:381:29
    |
381 |         assert_eq!(hunks[0].new_start, 1);
    |                             ^^^^^^^^^ unknown field
    |
help: a field with a similar name exists
    |
381 |         assert_eq!(hunks[0]._new_start, 1);
    |                             +

For more information about this error, try `rustc --explain E0609`.
error: could not compile `clawmaster-tools` (lib test) due to 2 previous errors
